--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ section{
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 .container {
   position: relative;
@@ -78,7 +79,7 @@ h2 { font-size: 24px;}
   color: #666;
   /*box-shadow: 1px 1px rgba(100, 100, 100, 0.7);*/
   width: 100%;
-  height: 100px;
+  height: 90px;
   margin: 0 auto;
 }
 #main_header .container {
@@ -88,14 +89,14 @@ header #main_gnb {
   float: right;
   text-align: right;
   background: #fff;
-  padding-top: 36px;
+  padding-top: 29px;
 }
 header #main_gnb li{
   display: inline-block;
 }
 #main_header > .container > h1 {
   float: left;
-  padding-top: 26px;
+  padding-top: 19px;
 }
 #main_header > .container > .nav_group {
   float: right;
@@ -229,35 +230,52 @@ header #main_gnb li{
   }
 #portfolio ul > li img {
   display: inline-block;
-  outline:1px solid #ccc;
-  box-shadow: 0px 1px 4px rgba(0,0,0,0.6);
+  box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
-/* bxslider */
-#portfolio .slider {
-  width: 100%;
+.more {
+    text-align: center;
+    margin: 10px 0;
+    padding: 10px 0;
+    width: 100%;
+    position: relative;
 }
-.slider img {
-  /* width: 100%; */
+.more > a {
+    border: 1px solid #000;
+    padding: 5px 20px;
+    border-radius: 15px;
 }
+.more-view {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    position: absolute;
+    z-index: 1;
+    transform: scale(0.95);
+    opacity: 0;
+    transition: 0.5s;
+    left: 0;
+    top: 0;
+}
+
 /*확대버튼
-.gallery .box a{
+.gallery a{
 position: relative;
 }
-.gallery .box a .cover{
+.gallery a .cover{
   position: absolute;
   top: 0;
   left: 0;
-  width: 370px;
-  height: 370px;
+  width: 334px;
+  height: 334px;
   background: rgba(0,0,0,0.5);
   transition: 0.5s;
 }
-.gallery .box a:hover .cover{
+.gallery a:hover{
   position: absolute;
   top: 0;
   left: 0;
-  width: 370px;
-  height: 370px;
+  width: 334px;
+  height: 334px;
   background: rgba(0,0,0,0.5);  
 }
 .gallery .box a .cover .fas{
@@ -424,10 +442,9 @@ margin-right: 2.5% !important;
   margin-top: 130px;
 }
 #contact ul {
-  margin-top: 20px;
-  letter-spacing: 1px;
+  margin-top: 18px; 
   text-align: left;
-}
+  }
 #contact ul li {
   line-height: 3em;
 }
