--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,41 @@
-/*김세아 포트폴리오 pc.css */
+/* css */
+
 *{
-  margin: 0;padding: 0;
-  box-sizing: border-box;
+	margin: 0; padding: 0;
+	box-sizing: border-box;
 }
-ul {list-style-type: none;}
-a {
-  text-decoration: none;
-  color: #666;
+body{
+	font-family: 'Roboto', sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
+	text-align: center;
+	line-height: 1.8;
+	font-size: 100%;
+}
+.container{
+	width: 100%;
+	height: 100%;
+	max-width: 1370px;
+	margin: 0 auto;
+/*	border: 1px solid red;*/
+	overflow: hidden;
+	padding: 10px;
+}
+li{ list-style-type: none;
+color: #666;}
+a{ 
+	text-decoration: none;
+	color: #5c5c5c;;
+}
+img {
+	max-width: 100%;
+	height: auto;
+}
+.clearfix:after,
+section:after,
+footer:after{
+	content: '';
+	display: block;
+	clear: both;
 }
 html, body{ height: 100%;
 }
@@ -15,136 +44,183 @@ button {
   border: none;
   outline: none;
 }
-/* body { overflow: hidden; } */
-body {
-  color: #666;;
-  font-family: 'Roboto', sans-serif;
-  font-family: 'Noto Sans KR', sans-serif;
-  line-height: 1.8;
-  font-size: 100%;
+
+/* Typography */
+h1{
+	font-weight: bold;
+	font-size: 2.2rem; /* em(부모 기준), rem무조건 body기준 */
+	color: #5c5c5c;;
 }
-section{
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
+p{
+	line-height: 1.5em;
+	line-height: 1.5rem;	
 }
-.container {
-  position: relative;
-  flex: 1;
-  min-width: 1400px;
-  max-width: 1400px;
-  /* outline: 1px solid red; */
-  padding-top: 100px;
-  overflow: hidden;
-  text-align: center;
-  margin: auto;
+
+/* 레이아웃 시스템 */
+[class^=col-]{
+	width: 100%;
 }
-h1 { font-size: 40px;}
-h2 { font-size: 24px;}
-/* 섹션 */
-#home{
-  background: #000;
+.title_line {
+	display: block;
+	border-bottom: 6px solid #fff;
+	width: 120px; 
+	margin: 0px auto;
+	margin-top: 0.3em;
+	margin-bottom: 3em;
+  }
+
+/* 헤더 */
+#main_header{
+	position: fixed;
+	background-color: #FFF;
+	width: 100%;
+	height: 90px;
+	z-index: 999;
+	box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
 }
-#about{
-  background: #D4E5E9;
+#main_gnb {
+	position: relative;
+	float: right;
+	text-align: right;
+  }
+  #main_header .container h1 {
+	float: left;
+	padding-top: 10px;
+  }
+
+  #main_header > .container #main_gnb li {
+	display: inline-block;
+	font-size: 16px;
+  }
+  /* gnb hover */
+#main_gnb a:hover {
+    color: #FCB08C;
+  }
+/* 토글 메뉴, 장바구니 아이콘 비표시 */
+#toggle, #util i { display: none;}
+/* 스크롤시 고정 메뉴 */
+#main_gnb{ margin-top: 20px;}
+#main_gnb li { display: inline-block;}
+#main_gnb li > a{ 
+	padding: 0 30px;
 }
-#portfolio{
-  background: #fff;
+
+@media (max-width: 767px) {
+	#main_header {
+		text-align: right; 
+	  }
+	  #main_header .container {
+		padding: 10px;
+	  }
+	  #main_header h1 { 
+		position: fixed;
+		left: 50%; top: 0px;
+		z-index: 9;
+		background: #504533;
+		width: 100%;
+	  }
+	  #main_gnb {
+		margin-top: 10px;
+	  }
+	  #util {
+		margin-bottom: 10px;
+	  }		
+	.nav_group {
+		position: fixed;
+		left: 0; top: 0px;
+		width: 100%;
+		height: 0;
+		background: #fff;
+		color: #666;
+		/* opacity: 0; */
+		overflow: hidden;
+		transition: 0.4s;
+		z-index: 9;
+	  }
+	  .nav_group  li {
+		margin: 1.4em 0;
+	  }
+	  .nav_group.show {
+		height: 260px;
+	  }
+	  
+	  /* 메뉴 슬라이드 다운 시 글자색 반전 */
+	  .nav_group + #toggle > i {
+		color: #fff;
+	  }
+	  .nav_group.show + #toggle > i {
+		color: #666;
+	  }
+	  
+	  #toggle {
+		position: fixed;
+		left: 10px; top: 16px;
+		z-index: 10;
+	  }
+	  #toggle > i { 
+		/* color: #666; */
+		font-size: 24px;
+	  }
+	  #util .fa-shopping-bag {
+		position: fixed;
+		right: 20px; top: 16px;
+		font-size: 24px;
+		color: #fff; 
+	  }
+#portfolio .categories {
+	display: none;
 }
-#career{
-  background: #D4E5E9;
-}
-#contact{
-  background: #FFE6DC;
-}
+}/*@media (max-width: 767px)영역 end
 
 /* 우측 페이지 인디케이터 */
 #pager {
-  position: fixed;
-  top: 50%;
-  right: 20px;
-  z-index: 9;
+	position: fixed;
+	top: 50%;
+	right: 30px;
+	z-index: 99;
+  }
+  #pager li.on a {
+	color: #fff;
+	font-weight: bold;
+  }
+
+/* 메인 비주얼 영역 */
+#home{
+	position: relative;
+	margin: 0 auto;
+	height: 100%;
+	background: #000;
+	background-size: cover;
+	color: #fff;
+	
 }
-#pager li.on a {
-  color: #FCB08C;
+.home_txt{
+	position: absolute;
+	background:#fff;
+	font-size: 4em;
+	text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+	text-align: center;
+	font-weight: 700;
+	padding: 60px 30px;
+	left: -100%; top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 99999;
 }
 
-/* 메인메뉴 */
-  /*화면의 고정 포지션*/
-#main_header {
-  position: fixed;
-  background-color: #FFF;
-  color: #666;
-  /*box-shadow: 1px 1px rgba(100, 100, 100, 0.7);*/
-  width: 100%;
-  height: 90px;
-  min-width: 768px;
-  margin: 0 auto;
-  overflow: hidden;
-  z-index: 999;
-  box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+#home .cta{
+	position: absolute;
+	display: inline-block;
+	bottom: 70px;
+	left: 50%;
+	transform: translate(-50%, 0);
+	background: rgba(51,51,51, 0.5);
+	color: #ccc;
+	padding: 8px 30px;
 }
-#main_header > h1 {
-  position: absolute;
-  left: 20px; top: 10px;
-}
-#main_header .container {
-  padding-top: 0px;
-}
-#main_gnb {
-  position: relative;
-  float: right;
-  text-align: right;
-  background: #fff;
-  padding-top: 29px;
-}
-header #main_gnb li{
-  display: inline-block;
-}
-#main_header > .container > h1 {
-  float: left;
-  padding-top: 19px;
-}
-#main_header > .container > .nav_group {
-  float: right;
-  padding-top: 30px;
-  color: #666;
-}
-#main_header > .container #main_gnb li {
-  display: inline-block;
-  margin-left: 1.5em; margin-right: 1.5em;
-  font-size: 16px;
-}
-/* gnb hover */
-#main_gnb a:hover {
-  color: #FCB08C;
-  font-weight: bold;
-} 
-
-.title_line {
-  display: block;
-  border-bottom: 5px solid #fff;
-  width: 120px; height: 2px;
-  margin: 0px auto;
-  margin-bottom: 50px;
-}
-.you-bg{
-  background: #fff;
-  height: 100%;
-  background-image: url("https://youtu.be/LN8RNhbzn6E");
-/*이미지가 패턴이 되지않고 가득채워짐*/
-  background-size:cover ;
-}
-.header_group {
-  z-index: 99;
-  text-align: center;
-  color: #fff;
-  font-size: 4em;
-  text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
+#home .cta:hover,
+#home .cta:active{
+	background: rgba(200,200,200, 0.3);
+	color: #fff;
 }
 .arrow {
     position: absolute;
@@ -155,340 +231,138 @@ header #main_gnb li{
 }
 @keyframes arrow-m {
   from {
-      bottom: 120px;
+      bottom: 10px;
   }
   to {
-      bottom: 110px;
+      bottom: 25px;
   }
 }
 
-/* about 섹션 */
-#about .container {
-  overflow: hidden;
-  /* outline: 1px solid red; */
+/* 자기소개 섹션 */
+#about{
+	background: #D4E5E9;
+	padding-top: 126px;
 }
-#about article {
-  width: 49.25%;
-  float: left;
-  /*outline: 1px solid green;*/
-}
-#about article:last-child {
-  margin-right: 0;
-}
-#about .list {
-  width: 605px;
-  float: right;
-}
+
 #about .list ul {
-  margin-bottom: 70px;
+  margin-bottom: 4.5em;
   letter-spacing: 1px;
   text-align: left;
 }
+#about .skills ul {
+    margin-bottom: 6em;
+  }
 #about .list ul li {
   line-height: 2.4em;
 }
 #about .list ul li p{
-  color:#999;
-  font-size: 14px;
+  color:#888;
+  font-size: 0.9em;
 }
 #about .list ul li .date{
   float: right;
-  color: #666;
-  font-size: 0.87em;
+  color: #888;
+  font-size: 0.9em; 
 }
+#about .list li img{
+	margin-top: 10px;
+  }
 .line { 
-  outline: 0.2px solid #999;
-  margin-bottom: 24px;}
+  outline: 1px solid #999;
+  margin-bottom: 0.6em;}
 
 
 /*portfolio 섹션*/
-#portfolio .title_line {
-  border-bottom: 5px solid #D4E5E9;
+#portfolio{
+	background: #efefef;
+    padding-top: 126px;
+    text-align: center;
 }
 #portfolio .button-group button{
-  width: 334px;
-  float: left;
-  padding: 10px 20px;
-  font-size: 18px;
-  color: #666;
-  background: #D4E5E9;
-  border: 1px solid #fff;
-  outline: none;
-  margin-right: 20px;
-  margin-bottom: 60px;
-  transition: 0.5s;
-}
-#portfolio .button-group button:nth-child(4) { 
-  margin-right: 0;
+	width: 23.8%;
+	float: center;
+	padding: 14px 20px;
+	font-size: 18px;
+	color: #666;
+	background: #D4E5E9;
+	border: 1px solid #fff;
+	outline: none;
+	margin-right: 1%;
+	margin-bottom: 3em;
+	transition: 0.5s;
   }
+  #portfolio .button-group button:last-child{
+	margin-right: 0%;}
+
 #portfolio .button-group button:hover{
-  background: #fff;
-  color: #999;
-  border: 1px solid #D4E5E9;
-  cursor: pointer;
-  }
+	background: #fff;
+	color: #999;
+	border: 1px solid #D4E5E9;
+	cursor: pointer;
+	}
 
-#portfolio ul > li {
-  width: 334px;
-  float: left;
-  margin-right: 20px;
-  padding-bottom: 20px;
+  
+
+/* 커리어 */
+#careers {
+	padding-top: 126px;
+	background: #D4E5E9;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	color: #FFF;
 }
-#portfolio ul > li:nth-child(4),#portfolio ul > li:nth-child(8) { 
-  margin-right: 0;
-  }
-#portfolio ul > li img {
-  display: inline-block;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
-}
-.more {
-    text-align: center;
-    margin: 10px 0;
-    padding: 10px 0;
-    width: 100%;
-    position: relative;
-}
-.more > a {
-    border: 1px solid #000;
-    padding: 5px 20px;
-    border-radius: 15px;
-}
-.more-view {
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    position: absolute;
-    z-index: 1;
-    transform: scale(0.95);
-    opacity: 0;
-    transition: 0.5s;
-    left: 0;
-    top: 0;
+#careers h2{
+	margin-bottom: 6em;
 }
 
-/*확대버튼
-.gallery a{
-position: relative;
-}
-.gallery a .cover{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 334px;
-  height: 334px;
-  background: rgba(0,0,0,0.5);
-  transition: 0.5s;
-}
-.gallery a:hover{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 334px;
-  height: 334px;
-  background: rgba(0,0,0,0.5);  
-}
-.gallery .box a .cover .fas{
-  display: none;
-}
-.gallery .box a .cover:hover .fas{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  color: #ccc;
-  font-size: 3em;
-  display: block;
-}
-
-확대버튼수정
-.gallery .box .package-sub a{
-  position: relative;
-}
-.gallery .box .package-sub a .cover{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 370px;
-    height: 370px;
-    background: rgba(0,0,0,0.5);
-    transition: 0.5s;
-    
-}
-.gallery .box .package-sub a:hover .cover{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 370px;
-    height: 370px;
-    background: rgba(0,0,0,0.5);
-    
-}
-.gallery .box .package-sub a .cover .fas{
-    display: none;
-}
-.gallery .box .package-sub a .cover:hover .fas{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    color: #ccc;
-    font-size: 3em;
-    display: block;
-}
-
-.gallery .branding a:hover .cover{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 370px;
-  height: 370px;
-  background: rgba(0,0,0,0.5);
-}
-
-#portfolio .gallery .box{
-  margin-top: 50px;
-  height: 360px;
-  width: 100%;
-  display: none;
-}
-#portfolio .gallery .box img{
-  vertical-align: middle;
-}
-#portfolio .gallery .box.show{
-  display: block;
-}
-#portfolio .gallery .box a{
-  width: 360px;
-  border: 1px solid #ccc;
-  margin-right: 13px;
-  margin-top: 13px;
-  overflow: hidden;
-  }
-#portfolio .gallery .box a{
-  display:inline-block;
-}
-#portfolio .gallery .box a:nth-child(4n){
-  margin-right: 0 ;
-}
-#portfolio .gallery .package .package-sub{
-  display: flex;
-  flex-direction: column;
-  width: 600px;
-float: left;
-/* justify-content: space-around; */
-/* align-items: flex-start; */
-/*
-margin: 0;
-padding: 0;
-}
-#portfolio .gallery .package>a{
- float: left;
- margin-left: 3%;
-}
-#portfolio .gallery .package{
-  margin-left:8%;
-}
-
-@media (max-width:1217px){
-  #portfolio .gallery .box a:nth-child(4n){
-      margin-right: 13px ;
-  }
-  #portfolio .section-title{
-      height: 900px;
-  }
-
-#portfolio .gallery .package .package-sub a{
-  overflow: visible;
-}
-#portfolio .gallery .package .package-sub a img{
-  width: 600px;
-}
-
-#portfolio .gallery .pop{
-  text-align: center;
-  margin-left:40px;
-}
-#portfolio .gallery .pop a{
-width: 200px;
-float: left;
-margin-right: 2.5% !important;
-}
-
-#portfolio .ad p{
-  font-size:25px;
-  background: #000;
-  color: #fff;
-  position: absolute;
-  top: 0;
-  width: 300px;
-  height: 50px;
- line-height: 50px;
- font-family: 'Saira Extra Condensed', sans-serif;
-}  */
-
-/* career 섹션 */
-#career .container {
-  overflow: hidden;
-  text-align: center;
-  /* outline: 1px solid red; */
-}
 /* contact 섹션 */
-#contact article {
-  float: left;
-  text-align: left;
-  margin-top: 30px;
+#contact{
+	background: #FFE6DC;
+	color: #666;
+	line-height: 2.4em;
+	padding: 20px;
+	padding-top: 100px;
+	padding-bottom: 6em;
 }
-#contact article:last-child {
-  width: 620px;
-  float: right;
+#contact h2{
+	padding-bottom: 16px;
 }
 #contact .fine li {
   display: inline-block;
-  float: left;
-  margin-right: 24px;
+  margin-right: 1em;
 }
-.fine {
-  margin-top: 130px;
+#contact .fine h2{
+	padding-top: 78px;
 }
 #contact ul {
-  margin-top: 18px; 
   text-align: left;
   }
-#contact ul li {
-  line-height: 3em;
-}
 .contact-form{
-  width: 600px;
-  height: 470px;
+  width: 100%;
+  height: 100%;
   box-shadow: 0px 2px 8px rgba(0,0,0,0.4);
-  padding: 20px;
+  padding: 3%;
   background: #fff;
-  transform: translateY(20px);
   z-index: 9;
 }
 .contact-form #name,
+.contact-form #phone,
 .contact-form #email,
 .contact-form #message{
-  width: 560px;
-  padding: 18px 18px;
-  margin-bottom: 14px;
+  width: 100%;
+  padding: 2% 2%;
+  margin-bottom: 2%;
   border: 1px solid #999;
-  font-size: 16px;
+  font-size: 1em;
 }
-
-#contact .drop ul {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.contact-form button{ font-size: 16px;}
+.contact-form button{ font-size: 1.1em;}
 .btn{
-  width: 560px;
+  width: 100%;
   display: inline-block;
   background: #666;
   color: #fff;
-  padding: 18px 18px;
-
+  padding: 2%;
 }
 .btn:hover{
   background: #fff;
@@ -496,19 +370,145 @@ margin-right: 2.5% !important;
   border: 1px solid #999;
 }
 
+#contact .col-2:first-child{
+	padding-left: 30px;
+	padding-right: 30px;
+}
+#contact .col-2:last-child{
+	padding-left: 30px;
+	padding-right: 30px;
+}
+#contact .title_line {
+	margin-top: 1em;
+  }
 
 /*푸터*/
-#main_footer {
-  width: 100%;
-  text-align: center;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #666;
-  color: #ccc;
+#main_footer{
+	font-size: small;
+	color: #999;
 }
-#main_footer .container p {
-  font-size: 14px;
-  text-align: center;
-  margin: 0px auto;
-  margin-top: 100px;
+#main_footer > #to_top{
+	background: #ececec;
+	padding: 16px;
+}
+#main_footer > #to_top > a{
+	display: inline-block;
+}
+#to_top .fa-arrow-up{
+	font-size: 24px;
+	color: #888;
+}
+#to_top .fa-arrow-up:hover{
+	color: #3c3c3c;
+}
+#main_footer > .copy{
+	background: #3c3c3c;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+/* 모바일 */
+@media (max-width: 767px){
+
+	#main_header{
+		height: 90px;
+		position: fixed;
+		text-align: center; 
+	}	
+	#main_gnb{ 
+		margin-top: 20px;
+	}
+	#main_gnb li > a{ 
+		padding: 0 10px;
+	}
+
+	  #main_header h1 { 
+		position: fixed;
+		left: 100px; top: 14px;
+		transform: translateX(-50%);
+		z-index: 9;
+		background: #fff;
+		width: 100%;
+	  }
+	  #util {
+		margin-bottom: 10px;
+	  }
+	  .nav_group {
+		position: fixed;
+		left: 0; top: 0px;
+		width: 100%;
+		height: 0;
+		background: #fff;
+		color: #666;
+		/* opacity: 0; */
+		overflow: hidden;
+		transition: 0.4s;
+		z-index: 9;
+	  }
+	  .nav_group  li {
+		margin: 1.4em 0;
+	  }
+	  .nav_group.show {
+		height: 260px;
+	  }
+	  
+	  /* 메뉴 슬라이드 다운 시 글자색 반전 */
+	  .nav_group + #toggle > i {
+		color: #fff;
+	  }
+	  .nav_group.show + #toggle > i {
+		color: #666;
+	  }
+	  
+	  #toggle {
+		position: fixed;
+		left: 10px; top: 16px;
+		z-index: 10;
+	  }
+	  #toggle > i { 
+		/* color: #666; */
+		font-size: 24px;
+	  }
+	#home{
+		height: calc(100vh - 120px);
+	}	
+	#careers .col-2:last-child{ margin-top: 60px;}
+#about .pic{margin-left: 1.2em;}
+#about .edu{margin-top: 2em;}
+#contact{
+text-align: center;
+}
+#contact .more_me{
+    margin-top: 4em;
+}}
+/* 중간크기 이상(컬럼이 형성) */
+@media (min-width: 768px){	
+	/* 레이아웃 시스템 */
+	.col-1{
+		width: 100%;
+	}
+	.col-2{
+		width: 50%;
+		float: left;
+	}
+	.col-3{
+		width: 33.33%;
+		float: left;
+	}
+	.col-4{
+		width: 25%;
+		float: left;
+	}
+}
+	
+	#about .col-2:first-child{
+		padding-right: 40px;
+	}
+	#about .col-2:last-child{
+		padding-left: 40px;
+	}
+	#about .col-2:nth-child(2){
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
