--- a/css/style.css
+++ b/css/style.css
@@ -110,9 +110,9 @@ p{
 #pager {
 	position: fixed;
 	top: 50%;
-	right: 40px;
+	right: 30px;
 	z-index: 99;
-	font-size: 14px;
+	font-size: 12px;
 	line-height: 28px;
 	opacity: 70%;
 	}
@@ -132,16 +132,11 @@ p{
 	
 }
 .home_txt{
-	position: absolute;
-	background:#fff;
-	font-size: 4em;
-	text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
-	text-align: center;
-	font-weight: 700;
-	padding: 60px 30px;
-	left: -100%; top: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 99999;
+  z-index: 999;
+  text-align: center;
+  color: #fff;
+  font-size: 4em;
+  text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
 }
 
 #home .cta{
@@ -150,15 +145,16 @@ p{
 	bottom: 70px;
 	left: 50%;
 	transform: translate(-50%, 0);
-	background: rgba(51,51,51, 0.5);
+	background: rgba(200,200,200,0.2);
 	color: #ccc;
 	padding: 8px 30px;
 }
 #home .cta:hover,
 #home .cta:active{
-	background: rgba(200,200,200, 0.3);
+	background: rgba(50,50,50, 0.5);
 	color: #fff;
 }
+
 .arrow {
     position: absolute;
     bottom: 10px;
@@ -168,10 +164,10 @@ p{
 }
 @keyframes arrow-m {
   from {
-      bottom: 10px;
+      bottom: 15px;
   }
   to {
-      bottom: 25px;
+      bottom: 30px;
   }
 }
 
